--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <main class="section container">
     <section class="section container">
         <div class="contact-card">
-            <h1>Contacto</h1>
+            <h1>Haznos saber que necesitas!</h1>
 
             <form action="https://formspree.io/f/xnnbojnb" method="POST" id="contactForm">
                 <div class="form-grid">
@@ -36,12 +36,12 @@
                     </label>
 
                     <label class="full">
-                        <span>Asunto</span>
-                        <input class="input" type="text" name="asunto">
+                        <span>Compañia</span>
+                        <input class="input" type="text" name="enterprise">
                     </label>
 
                     <label class="full">
-                        <span>Mensaje</span>
+                        <span>En que te podemos ayudar?</span>
                         <textarea class="input" name="mensaje" rows="6" required></textarea>
                     </label>
                 </div>
