--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <main class="section container">
     <section class="section container">
         <div class="contact-card">
-            <h1>Haznos saber que necesitas!</h1>
+            <h1>Contacto</h1>
 
             <form action="https://formspree.io/f/xnnbojnb" method="POST" id="contactForm">
                 <div class="form-grid">
@@ -36,13 +36,18 @@
                     </label>
 
                     <label class="full">
-                        <span>Compañia</span>
-                        <input class="input" type="text" name="enterprise">
+                        <span>Asunto</span>
+                        <input class="input" type="text" name="asunto">
                     </label>
 
                     <label class="full">
-                        <span>En que te podemos ayudar?</span>
-                        <textarea class="input" name="mensaje" rows="6" required></textarea>
+                        <span>Telefono</span>
+                        <input class="input" type="text" name="telefono">
+                    </label>
+
+                    <label class="full">
+                        <span>Mensaje</span>
+                        <textarea class="input" name="mensaje" rows="6" required placeholder="Describe brevemente tu consulta..."></textarea>
                     </label>
                 </div>
 
