--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
                     </label>
 
                     <label class="full">
+                        <span>Telefono</span>
+                        <input class="input" type="text" name="telefono">
+                    </label>
+
+                    <label class="full">
                         <span>Mensaje</span>
-                        <textarea class="input" name="mensaje" rows="6" required></textarea>
+                        <textarea class="input" name="mensaje" rows="6" required placeholder="Describe brevemente tu consulta..."></textarea>
                     </label>
                 </div>
 
