--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
                         <input class="input" type="email" name="email" required>
                     </label>
 
-                    <label class="full">
+                    <label>
                         <span>Asunto</span>
                         <input class="input" type="text" name="asunto">
                     </label>
 
-                    <label class="full">
+                    <label>
                         <span>Telefono</span>
                         <input class="input" type="text" name="telefono">
                     </label>
