--- a/index.html
+++ b/index.html
@@ -63,19 +63,25 @@
                     </label>
 
                     <label>
-                        <span>Email</span>
-                        <input class="input" type="email" name="email" required>
-                    </label>
-
-                    <label>
-                        <span>Asunto</span>
-                        <input class="input" type="text" name="asunto">
+                        <span>Empresa</span>
+                        <input class="input" type="text" name="empresa" required>
                     </label>
 
                     <label>
                         <span>Telefono</span>
                         <input class="input" type="text" name="telefono">
                     </label>
+
+                    <label>
+                        <span>Email</span>
+                        <input class="input" type="email" name="email" required>
+                    </label>
+
+                    <label class="full">
+                        <span>Asunto</span>
+                        <input class="input" type="text" name="asunto">
+                    </label>
+
 
                     <label class="full">
                         <span>Mensaje</span>
