--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="contact-card">
             <h1>Contacto</h1>
 
-            <form action="https://formspree.io/f/xnnbojnb" method="POST" id="contactForm">
+            <form action="https://formspree.io/f/mdklvkyy" method="POST" id="contactForm">
                 <div class="form-grid">
                     <label>
                         <span>Nombre</span>
@@ -65,7 +65,7 @@
         </div>
     </section>
     <script>
-        const FORM_URL = "https://formspree.io/f/xnnbojnb";
+        const FORM_URL = "https://formspree.io/f/mdklvkyy";
         const form = document.getElementById("contactForm");
         const estado = document.getElementById("estado");
 
