--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="contact-card">
             <h1>Contacto</h1>
 
-            <form action="https://formspree.io/f/xnnbojnb" method="POST" id="contactForm">
+            <form action="https://formspree.io/f/mdklvkyy" method="POST" id="contactForm">
                 <div class="form-grid">
                     <label>
                         <span>Nombre</span>
@@ -97,7 +97,7 @@
         </div>
     </section>
     <script>
-        const FORM_URL = "https://formspree.io/f/xnnbojnb";
+        const FORM_URL = "https://formspree.io/f/mdklvkyy";
         const form = document.getElementById("contactForm");
         const estado = document.getElementById("estado");
 
